<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xiongyayun.framework</groupId>
	<artifactId>athena-framework</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>Athena Framework</name>
	<description>框架</description>

	<properties>
		<revision>1.0.0-SNAPSHOT</revision>
		<main.basedir>${basedir}/..</main.basedir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<athena-boot.version>0.0.1-SNAPSHOT</athena-boot.version>
		<athena-cloud.version>0.0.1-SNAPSHOT</athena-cloud.version>
		<hutool-all.version>5.3.10</hutool-all.version>
	</properties>

	<modules>
		<module>athena-core</module>
		<module>athena-db</module>
		<module>athena-util</module>
	</modules>

	<repositories>
		<repository>
			<id>pentaho-public</id>
			<name>Pentaho Public</name>
			<url>http://nexus.pentaho.org/content/groups/omni/</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>plugins</id>
			<name>Maven Central</name>
			<url>http://nexus.pentaho.org/content/groups/omni</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>compile</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.xiongyayun.boot</groupId>
				<artifactId>athena-spring-boot-dependencies</artifactId>
				<version>${athena-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.xiongyayun.cloud</groupId>
				<artifactId>athena-spring-cloud-dependencies</artifactId>
				<version>${athena-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>com.xiongyayun.framework</groupId>
				<artifactId>athena-core</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.xiongyayun.framework</groupId>
				<artifactId>athena-db</artifactId>
				<version>${revision}</version>
			</dependency>
			<dependency>
				<groupId>com.xiongyayun</groupId>
				<artifactId>athena-util</artifactId>
				<version>${revision}</version>
			</dependency>

			<dependency>
				<groupId>cn.hutool</groupId>
				<artifactId>hutool-all</artifactId>
				<version>${hutool-all.version}</version>
			</dependency>

			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-core</artifactId>
				<version>3.3.2</version>
				<scope>compile</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-extension</artifactId>
				<version>3.3.2</version>
				<scope>compile</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>3.10.3</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>6.1.5.Final</version>
<!--				<version>7.0.0.Alpha6</version>-->
			</dependency>
			<dependency>
				<groupId>javax.validation</groupId>
				<artifactId>validation-api</artifactId>
				<version>2.0.1.Final</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-core</artifactId>
				<version>1.5.3</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.12</version>
			</dependency>

<!--			<dependency>-->
<!--				<groupId>org.springframework</groupId>-->
<!--				<artifactId>spring-web</artifactId>-->
<!--				<version>5.2.8.RELEASE</version>-->
<!--			</dependency>-->
<!--			<dependency>-->
<!--				<groupId>org.springframework</groupId>-->
<!--				<artifactId>spring-webmvc</artifactId>-->
<!--				<version>5.2.8.RELEASE</version>-->
<!--			</dependency>-->
<!--			<dependency>-->
<!--				<groupId>org.springframework</groupId>-->
<!--				<artifactId>spring-context</artifactId>-->
<!--				<version>5.2.8.RELEASE</version>-->
<!--			</dependency>-->
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- 添加flatten-maven-plugin用于替换${revision} -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.2.5</version>
				<configuration>
					<!-- 是否更新pom文件 -->
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
